--- a/Week2_Invoice_Form_Design/Week2_Invoice_Form.csproj
+++ b/Week2_Invoice_Form_Design/Week2_Invoice_Form.csproj
@@ -52,10 +52,20 @@
     <Compile Include="frmInvoiceTotal.Designer.cs">
       <DependentUpon>frmInvoiceTotal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Calculators\frmBookFeeCalculator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Calculators\frmBookFeeCalculator.Designer.cs">
+      <DependentUpon>frmBookFeeCalculator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validator.cs" />
     <EmbeddedResource Include="frmInvoiceTotal.resx">
       <DependentUpon>frmInvoiceTotal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Calculators\frmBookFeeCalculator.resx">
+      <DependentUpon>frmBookFeeCalculator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
